Only text and background change

--- a/JsProject.html
+++ b/JsProject.html
@@ -26,7 +26,7 @@
    <nav class="navbar navbar-expand-lg bg-body-tertiary" class="navbar bg-dark border-bottom border-bottom-dark"
       data-bs-theme="dark">
       <div class="container-fluid">
-         <a class="navbar-brand" href="#">MenuBar</a>
+         <a id="Home" class="navbar-brand" href="JsProject.html">Home</a>
          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -34,25 +34,18 @@
          <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                <li class="nav-item">
-                  <a id="test" class="nav-link active" class="navbar-brand" aria-current="page"
-                     href="JsProject.html">Home</a>
+                  <a id="myskills" class="nav-link active" class="navbar-brand" aria-current="page" href="#">Career
+                     Stats</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" style="color: white;"
-                     href="https://getbootstrap.com/docs/5.3/components/dropdowns/">My Skills</a>
+                  <a class="nav-link active" id="myskills" style="color: hsla(135, 91%, 45%, 0.849);"
+                     href="MySkillsPage.html">My
+                     Skills</a>
                </li>
-               <!-- <li class="dropdown">
-                  <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
-                     aria-expanded="false">
-                     Dropdown button
-                  </button> -->
-               <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-               </ul>
+               <li class="nav-item">
+                  <a id="myskills" class="nav-link active" class="navbar-brand" aria-current="page"
+                     href="#">Achievements</a>
                </li>
-
             </ul>
             <form class="d-flex" role="search">
                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -83,21 +76,20 @@
             <a href="JsProject.html" class="btn btn-success">HomePage</a>
       </div>
    </div>
+   <div style="font-size: larger;"><b><u>MY DAY TO DAY LIFESTYLE:-</u></b></div>
+   <br>
    <div class="accordion" id="accordionExample">
       <div class="accordion-item">
          <h2 class="accordion-header">
             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
                aria-expanded="true" aria-controls="collapseOne">
-               Accordion Item #1
+               <b> 7:00 AM - 10: 00 AM </b>
             </button>
          </h2>
          <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-               <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse
-               plugin adds the appropriate classes that we use to style each element. These classes control the overall
-               appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom
-               CSS or overriding our default variables. It's also worth noting that just about any HTML can go within
-               the <code>.accordion-body</code>, though the transition does limit overflow.
+               In this range of time, I complete my breakfast and prepare for whole day scedule along with searching
+               source of my skills building.
             </div>
          </div>
       </div>
@@ -105,16 +97,13 @@
          <h2 class="accordion-header">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-               Accordion Item #2
+               <b> 10:00 AM - 02:00 PM</b>
             </button>
          </h2>
          <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-               <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse
-               plugin adds the appropriate classes that we use to style each element. These classes control the overall
-               appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom
-               CSS or overriding our default variables. It's also worth noting that just about any HTML can go within
-               the <code>.accordion-body</code>, though the transition does limit overflow.
+               This is the most significant time of whole day. Within this time i learn,read, practice and write several
+               <b>C++</b> related work taking no break.
             </div>
          </div>
       </div>
@@ -122,16 +111,13 @@
          <h2 class="accordion-header">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-               Accordion Item #3
+               <b>6:00 AM - 11:00 AM</b>
             </button>
          </h2>
          <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-               <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse
-               plugin adds the appropriate classes that we use to style each element. These classes control the overall
-               appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom
-               CSS or overriding our default variables. It's also worth noting that just about any HTML can go within
-               the <code>.accordion-body</code>, though the transition does limit overflow.
+               The most interesting and energetic time period of mine is this as i learn Web Development and build those
+               website works enjoyfully(I never feel bore in this period).
             </div>
          </div>
       </div>
