--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
    <nav class="navbar navbar-expand-lg bg-body-tertiary" class="navbar bg-dark border-bottom border-bottom-dark"
       data-bs-theme="dark">
       <div class="container-fluid">
-         <a id="Home" class="navbar-brand" href="JsProject.html">Home</a>
+         <a id="Home" class="navbar-brand" href="index.html">Home</a>
          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
