--- a/MySkillsPage.html
+++ b/MySkillsPage.html
@@ -10,7 +10,7 @@
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
       crossorigin="anonymous"></script>
-   <link rel="stylesheet" href="PortFolio.css">
+   <link rel="stylesheet" href="myskills.css">
    <style>
       body {
          background-image: url(BG\ coding\ image\ 1.jpg);
@@ -58,8 +58,85 @@
       </div>
 
    </nav>
-
-
+   <br>
+   <br>
+   <br>
+   <div class="skills_intro" style="text-align: center;">
+      <p><b>Hey! You're welcome to my skills stats page. Click below button to explore it. Thank you</b></p>
+      <br>
+      <a class="small_link" href="#here_are_skill">Explore</a>
+   </div>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br> <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br> <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <div id="here_are_skill" style="color: black;">
+      <a class="linkclr" href="#">C++</a>
+      <a class="linkclr" href="#">Html</a>
+      <a class="linkclr" href="#">CSS</a>
+      <a class="linkclr" href="#">JavaScipt</a>
+   </div>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
 
    <script src="MySkills.js">
 
