--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
    <div class="accordion" id="accordionExample">
       <div class="accordion-item">
          <h2 class="accordion-header">
-            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
-               aria-expanded="true" aria-controls="collapseOne">
+            <button class="accordion-button expander down" type="button" data-bs-toggle="collapse"
+               data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                <b> 7:00 AM - 10: 00 AM </b>
             </button>
          </h2>
