styles are updated

--- a/MySkillsPage.html
+++ b/MySkillsPage.html
@@ -42,12 +42,16 @@
                      Stats</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link active" id="myskills" style="color: hsla(135, 91%, 45%, 0.849);" href="#">My
+                  <a class="nav-link active" id="myskills" href="#">My
                      Skills</a>
                </li>
                <li class="nav-item">
                   <a id="myskills" class="nav-link active" class="navbar-brand" aria-current="page"
                      href="#">Achievements</a>
+               </li>
+               <li class="nav-item">
+                  <a id="myskills" class="nav-link active" class="navbar-brand" aria-current="page" href="#foot">contact
+                  </a>
                </li>
             </ul>
             <form class="d-flex" role="search">
@@ -120,23 +124,19 @@
       <a class="linkclr" href="#">CSS</a>
       <a class="linkclr" href="#">JavaScipt</a>
    </div>
-   <br>
-   <br>
-   <br>
-   <br>
-   <br>
-   <br>
-   <br>
-   <br>
-   <br>
-   <br>
-   <br>
-   <br>
-   <br>
-   <br>
-   <br>
-   <br>
-   <br>
+   <br> <br><br><br><br><br><br><br><br><br><br><br>
+
+   <div id="foot">
+      <a href="https://www.facebook.com/arya.sengupta.714"><img src="FacebookLogo.png" height="50px" width="50px"></a>
+      <a style="margin-top: 4px;" href="https://www.instagram.com/arnab_tech.01/"><img src="InstaLogo.png" height="40px"
+            width="50px"></a>
+      <a style="margin: 5px 8px 0px 10px;"
+         href="https://www.linkedin.com/in/arnab-kundu-29aa0422b?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BOkUadgXxQlewYQi%2Bv%2Fn0xA%3D%3D"><img
+            src="linkedinLogo2.jpg" height="34px" width="30px"></a>
+      <a style="margin: 3px 0px 0px 10px;" href="https://github.com/ArnabKundu10"><img src="github_logo2.jpg"
+            height="35px" width="30px"></a>
+   </div>
+
 
    <script src="MySkills.js">
 
