--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
                   <a id="myskills" class="nav-link active" class="navbar-brand" aria-current="page"
                      href="#">Achievements</a>
                </li>
+               <li class="nav-item">
+                  <a id="myskills" class="nav-link active" class="navbar-brand" aria-current="page" href="#foot">contact
+                  </a>
+               </li>
             </ul>
             <form class="d-flex" role="search">
                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -122,11 +126,20 @@
          </div>
       </div>
    </div>
-   <!-- <footer>
+   <br>
+   <br>
+
+   <div id="foot">
       <a href="https://www.facebook.com/arya.sengupta.714"><img src="FacebookLogo.png" height="50px" width="50px"></a>
-      <a href=""><img src="FacebookLogo.png" height="50px" width="50px"></a>
-      <a href="https://www.facebook.com/arya.sengupta.714"><img src="FacebookLogo.png" height="50px" width="50px"></a>
-   </footer> -->
+      <a style="margin-top: 4px;" href="https://www.instagram.com/arnab_tech.01/"><img src="InstaLogo.png" height="40px"
+            width="50px"></a>
+      <a style="margin: 5px 8px 0px 10px;"
+         href="https://www.linkedin.com/in/arnab-kundu-29aa0422b?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BOkUadgXxQlewYQi%2Bv%2Fn0xA%3D%3D"><img
+            src="linkedinLogo2.jpg" height="34px" width="30px"></a>
+      <a style="margin: 3px 0px 0px 10px;" href="https://github.com/ArnabKundu10"><img src="github_logo2.jpg"
+            height="35px" width="30px"></a>
+   </div>
+
 
    <script>
       console.log("hey")
