--- a/index.html
+++ b/index.html
@@ -33,27 +33,28 @@
          </button>
          <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+               <li class="nav-item">
+                  <a class="nav-link active" id="myskills" href="MySkillsPage.html">My
+                     Skills</a>
+               </li>
+               <li class="nav-item">
+                  <a id="myskills" class="nav-link active" class="navbar-brand" aria-current="page"
+                     href="My_Projects.html">My
+                     Projects</a>
+               </li>
                <li class="nav-item">
                   <a id="myskills" class="nav-link active" class="navbar-brand" aria-current="page" href="#">Career
                      Stats</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link active" id="myskills" style="color: hsla(135, 91%, 45%, 0.849);"
-                     href="MySkillsPage.html">My
-                     Skills</a>
-               </li>
-               <li class="nav-item">
-                  <a id="myskills" class="nav-link active" class="navbar-brand" aria-current="page"
-                     href="#">Achievements</a>
-               </li>
-               <li class="nav-item">
-                  <a id="myskills" class="nav-link active" class="navbar-brand" aria-current="page" href="#foot">contact
+                  <a id="myskills" class="nav-link active" class="navbar-brand" aria-current="page" href="#foot">Contact
                   </a>
                </li>
             </ul>
             <form class="d-flex" role="search">
-               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-               <button id="searchbtn" class="btn btn-outline-success" type="submit">Search</button>
+               <input class="form-control me-2" disabled type="search" placeholder="Search" aria-label="Search">
+               <button id="searchbtn" disabled class="btn btn-outline-success" type="submit">Search</button>
             </form>
          </div>
       </div>
@@ -77,7 +78,7 @@
             <p class="card-text" style="font-style: italic;">Hi, I am Arnab Kundu from West Bengal, India and a student
                of Kalyani Government
                Engineering College.<b>Explore My Profile</b></p>
-            <a href="JsProject.html" class="btn btn-success">HomePage</a>
+            <a href="index.html" class="btn btn-success">HomePage</a>
       </div>
    </div>
    <div style="font-size: larger;"><b><u>MY DAY TO DAY LIFESTYLE:-</u></b></div>
@@ -133,11 +134,11 @@
       <a href="https://www.facebook.com/arya.sengupta.714"><img src="FacebookLogo.png" height="50px" width="50px"></a>
       <a style="margin-top: 4px;" href="https://www.instagram.com/arnab_tech.01/"><img src="InstaLogo.png" height="40px"
             width="50px"></a>
-      <a style="margin: 5px 8px 0px 10px;"
+      <a style="margin: 6px 8px 0px 10px;" class="linkedin"
          href="https://www.linkedin.com/in/arnab-kundu-29aa0422b?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BOkUadgXxQlewYQi%2Bv%2Fn0xA%3D%3D"><img
-            src="linkedinLogo2.jpg" height="34px" width="30px"></a>
-      <a style="margin: 3px 0px 0px 10px;" href="https://github.com/ArnabKundu10"><img src="github_logo2.jpg"
-            height="35px" width="30px"></a>
+            src="linkedinLogo3.jpg" height="34px" width="32px"></a>
+      <a style="margin: 5px 0px 0px 10px;" href="https://github.com/ArnabKundu10"><img src="github_logo2.jpg"
+            height="33px" width="31px"></a>
    </div>
 
 
