table format changed

--- a/My_Projects.html
+++ b/My_Projects.html
@@ -67,7 +67,7 @@
 
    </nav>
    <div class="tbl">
-      <table>
+      <table id="checktbl">
          <tr>
             <th>
                Project Name
