--- a/CareerStats.html
+++ b/CareerStats.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>New Project</title>
@@ -15,17 +19,8 @@
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
       crossorigin="anonymous"
     ></script>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-    />
-    <link rel="stylesheet" href="CssAsset/myskills.css" />
+    <link rel="stylesheet" href="CssAsset/CareerStats.css" />
     <style>
-      body {
-        background-image: url(ImgAsset/BG\ coding\ image\ 1.jpg);
-        overflow-x: hidden !important;
-      }
-
       .dropdown {
         margin-top: 20px;
         margin-left: 100px;
@@ -38,7 +33,7 @@
 
   <body class="bg-dark p-2 text-white bg-opacity-80">
     <nav
-      class="navbar navbar-expand-lg bg-body-tertiary"
+      class="navbar navbar-expand-lg bg-body-tertiary z-3"
       class="navbar bg-dark border-bottom border-bottom-dark"
       style="position: fixed; width: 100%"
       data-bs-theme="dark"
@@ -97,129 +92,6 @@
         </div>
       </div>
     </nav>
-    <br />
-    <br />
-    <br />
-    <div class="skills_intro" style="text-align: center">
-      <p>
-        <b
-          >Hey! You're welcome to my skills stats page. Click below button to
-          explore it. Thank you</b
-        >
-      </p>
-      <br />
-      <a class="small_link" href="#here_are_skill">Explore</a>
-    </div>
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <div id="here_are_skill" style="color: black; user-select: none">
-      <a class="linkclr" href="#"> <i class="fa-solid fa-c"></i></a>
-      <a class="linkclr" href="#"
-        ><i class="fa-solid fa-c"></i><i class="fa-solid fa-plus"></i
-        ><i class="fa-solid fa-plus"></i
-      ></a>
-      <a class="linkclr" href="#">
-        <i class="fa-brands fa-html5"></i>
-        HTML
-      </a>
-      <a class="linkclr" href="#"> <i class="fa-brands fa-css3-alt"></i>CSS</a>
-      <a class="linkclr" href="#"><i class="fa-brands fa-js"></i>JavaScipt</a>
-      <a class="linkclr" href="#"><i class="fa-brands fa-react"></i>ReactJs</a>
-      <a class="linkclr" href="#"><i class="fa-brands fa-git-alt"></i>Git</a>
-      <a class="linkclr" href="#"><i class="fa-brands fa-github"></i>Github</a>
-    </div>
-    <br />
-    <br />
-    <br />
-    <div
-      class="d-flex flex-row justify-content-center justify-content-around bg-transparent"
-    >
-      <div class="codePlatform">
-        <a href="https://leetcode.com/ArnabKundu123/"
-          ><img
-            style="width: 20vw; height: 20vw"
-            src="https://coderaky.com/images/icons/leetcode.png"
-            alt=""
-        /></a>
-      </div>
-
-      <div
-        style="
-          font-size: 2vw;
-          font-weight: bolder;
-          padding-left: -50%;
-          padding-right: -50%;
-          margin-top: 5rem;
-          text-align: center;
-        "
-      >
-        <p>
-          <i class="fa-solid fa-arrow-left"></i>MY CODING PLATFORMS<i
-            class="fa-solid fa-arrow-right"
-          ></i>
-        </p>
-        <p>CLICK TO SEE STATS</p>
-      </div>
-      <div class="codePlatform">
-        <a
-          href="https://www.codingninjas.com/studio/profile/97bc5090-3110-4250-8496-4542d7e3b389"
-          ><img
-            style="width: 20vw; height: 20vw"
-            src="https://anoojraj07.github.io/Portfolio/cs.png"
-            alt=""
-        /></a>
-      </div>
-    </div>
-    <br />
-    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 
     <iframe
       src="CommonFiles/footer.html"
@@ -227,8 +99,7 @@
       height="400"
       frameborder="0"
     ></iframe>
-
-    <script src="MySkills.js"></script>
+    <script src="MyPortfolio.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
