--- a/My_Projects.html
+++ b/My_Projects.html
@@ -1,149 +1,183 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>New Project</title>
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>New Project</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-      crossorigin="anonymous"></script>
-   <link rel="stylesheet" href="Project.css">
-   <style>
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="CssAsset/Project.css" />
+    <style>
       body {
-         background-image: url(bg5.webp);
-         background-size: cover;
-
+        background-image: url(ImgAsset/bg5.webp);
+        background-size: cover;
       }
 
       .dropdown {
-         margin-top: 20px;
-         margin-left: 100px;
-         text-align: center;
-         position: relative;
-         clear: both;
+        margin-top: 20px;
+        margin-left: 100px;
+        text-align: center;
+        position: relative;
+        clear: both;
       }
-   </style>
-</head>
+    </style>
+  </head>
 
-<body class="bg-dark p-2 text-white bg-opacity-80">
-   <nav class="navbar navbar-expand-lg bg-body-tertiary" class="navbar bg-dark border-bottom border-bottom-dark"
-      data-bs-theme="dark">
+  <body class="bg-dark p-2 text-white bg-opacity-80">
+    <nav
+      class="navbar navbar-expand-lg bg-body-tertiary"
+      class="navbar bg-dark border-bottom border-bottom-dark"
+      style="position: fixed; width: 100%"
+      data-bs-theme="dark"
+    >
       <div class="container-fluid">
-         <a id="Home" class="navbar-brand" href="index.html">Home</a>
-         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-         </button>
-         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
-               <li class="nav-item">
-                  <a class="nav-link active" id="myskills" href="MySkillsPage.html">My
-                     Skills</a>
-               </li>
-               <li class="nav-item">
-                  <a id="myskills" class="nav-link active" class="navbar-brand" aria-current="page"
-                     href="My_Projects.html">My
-                     Projects</a>
-               </li>
-               <li class="nav-item">
-                  <a id="myskills" class="nav-link active" class="navbar-brand" aria-current="page" href="#">Career
-                     Stats</a>
-               </li>
-               <li class="nav-item">
-                  <a id="myskills" class="nav-link active" class="navbar-brand" aria-current="page" href="#foot">Contact
-                  </a>
-               </li>
-            </ul>
-            <form class="d-flex" role="search">
-               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-               <button id="searchbtn" class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-         </div>
+        <a id="Home" class="navbar-brand" href="index.html">Home</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" id="myskills" href="MySkillsPage.html"
+                >My Skills</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                id="myskills"
+                class="nav-link active"
+                class="navbar-brand"
+                aria-current="page"
+                href="My_Projects.html"
+                >My Projects</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                id="myskills"
+                class="nav-link active"
+                class="navbar-brand"
+                aria-current="page"
+                href="CareerStats.html"
+                >Career Stats</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                id="myskills"
+                class="nav-link active"
+                class="navbar-brand"
+                aria-current="page"
+                href="#foot"
+                >Contact
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
-
-   </nav>
-   <div class="tbl">
+    </nav>
+    <div class="tbl">
       <table id="checktbl">
-         <tr>
-            <th>
-               Project Name
-            </th>
-            <th>
-               Github Repository
-            </th>
-            <th>
-               Link
-            </th>
-         </tr>
-         <tr>
-            <td>
-               My Beginner Portfolio
-            </td>
-            <td>
-               <a href="https://github.com/ArnabKundu10/My_Beginner_Portfolio">GitLink</a>
-            </td>
-            <td>
-               <a href="https://arnabkundu10.github.io/My_Beginner_Portfolio/">WebsiteLink</a>
-            </td>
-         </tr>
-         <tr>
-            <td>
-               PostOffice Website
-            </td>
-            <td>
-               <a href="https://github.com/ArnabKundu10/PostOffice-Portal-Design">GitLink</a>
-            </td>
-            <td>
-               <a href="https://arnabkundu10.github.io/PostOffice-Portal-Design/">WebsiteLink</a>
-            </td>
-         </tr>
-         <tr>
-            <td>
-               Contact Information Fill Up
-            </td>
-            <td>
-               GitLink
-            </td>
-            <td>
-               WebsiteLink
-            </td>
-         </tr>
+        <tr>
+          <th>Project Name</th>
+          <th>Github Repository</th>
+          <th>Link</th>
+        </tr>
+        <tr>
+          <td>My Beginner Portfolio</td>
+          <td>
+            <a href="https://github.com/ArnabKundu10/My_Beginner_Portfolio"
+              >GitLink</a
+            >
+          </td>
+          <td>
+            <a href="https://arnabkundu10.github.io/My_Beginner_Portfolio/"
+              >WebsiteLink</a
+            >
+          </td>
+        </tr>
+        <tr>
+          <td>PostOffice Website</td>
+          <td>
+            <a href="https://github.com/ArnabKundu10/PostOffice-Portal-Design"
+              >GitLink</a
+            >
+          </td>
+          <td>
+            <a href="https://arnabkundu10.github.io/PostOffice-Portal-Design/"
+              >WebsiteLink</a
+            >
+          </td>
+        </tr>
+        <tr>
+          <td>Guess The Case</td>
+          <td>
+            <a href="https://github.com/ArnabKundu10/GuessTheCase">GitLink</a>
+          </td>
+          <td>
+            <a href="https://arnabkundu10.github.io/GuessTheCase/"
+              >WebsiteLink</a
+            >
+          </td>
+        </tr>
+        <tr>
+          <td>My Main Portfolio</td>
+          <td>
+            <a href="https://github.com/ArnabKundu10/MainPortfolio">GitLink</a>
+          </td>
+          <td>
+            <a href="https://arnabkundu10.github.io/MainPortfolio/"
+              >WebsiteLink</a
+            >
+          </td>
+        </tr>
       </table>
-   </div>
-   <br>
-   <br>
+    </div>
+    <br />
+    <br />
 
-   <div id="foot">
-      <a href="https://www.facebook.com/arya.sengupta.714"><img src="FacebookLogo.png" height="50px" width="50px"></a>
-      <a style="margin-top: 4px;" href="https://www.instagram.com/arnab_tech.01/"><img src="InstaLogo.png" height="40px"
-            width="50px"></a>
-      <a style="margin: 6px 8px 0px 10px;" class="linkedin"
-         href="https://www.linkedin.com/in/arnab-kundu-29aa0422b?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BOkUadgXxQlewYQi%2Bv%2Fn0xA%3D%3D"><img
-            src="linkedinLogo3.jpg" height="34px" width="32px"></a>
-      <a style="margin: 5px 0px 0px 10px;" href="https://github.com/ArnabKundu10"><img src="github_logo2.jpg"
-            height="33px" width="31px"></a>
-   </div>
+    <iframe
+      src="CommonFiles/footer.html"
+      width="100%"
+      height="400"
+      frameborder="0"
+    ></iframe>
 
+    <script>
+      console.log("hey");
 
-   <script>
-      console.log("hey")
-
-      searchbtn.addEventListener('click', clkfunc);
+      searchbtn.addEventListener("click", clkfunc);
       function clkfunc(e) {
-         console.log("hey")
-         console.log(e.currentTarget);
+        console.log("hey");
+        console.log(e.currentTarget);
       }
-   </script>
-   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    </script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-      crossorigin="anonymous"></script>
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"
       integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS"
-      crossorigin="anonymous"></script>
-</body>
-
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
