--- a/CommonFiles/footer.html
+++ b/CommonFiles/footer.html
@@ -23,5 +23,8 @@
         ><img src="../ImgAsset/github_logo2.jpg" height="33px" width="31px"
       /></a>
     </div>
+    <p class="text-light text-center">
+      © 2023 Arnab Kundu. All rights reserved.
+    </p>
   </body>
 </html>
