--- a/CommonFiles/header.html
+++ b/CommonFiles/header.html
@@ -46,7 +46,7 @@
                 >My Skills</a
               >
             </li>
-            <li class="nav-item">
+            <li class="nav-item" onclick="func1(this)">
               <a
                 id="myskills"
                 class="nav-link active"
@@ -56,7 +56,7 @@
                 >My Projects</a
               >
             </li>
-            <li class="nav-item">
+            <li class="nav-item" onclick="func1(this)">
               <a
                 id="myskills"
                 class="nav-link active"
@@ -66,7 +66,7 @@
                 >Career Stats</a
               >
             </li>
-            <li class="nav-item">
+            <li class="nav-item" onclick="func1(this)">
               <a
                 id="myskills"
                 class="nav-link active"
@@ -80,7 +80,7 @@
         </div>
       </div>
     </nav>
-
+    <script src="../JsAsset/head.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
