--- a/MySkillsPage.html
+++ b/MySkillsPage.html
@@ -163,23 +163,23 @@
     <br />
     <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 
-    <iframe
-      id="foot"
-      src="CommonFiles/footer.html"
-      width="100%"
-      height="400"
-      frameborder="0"
-    ></iframe>
+    <div id="footer-placeholder"></div>
     <script>
       fetch("CommonFiles/header.html")
         .then((response) => response.text())
         .then((data) => {
           // Inject the content into the placeholder
-          console.log(data);
           document.getElementById("header-placeholder").innerHTML = data;
         });
+      fetch("CommonFiles/footer.html")
+        .then((response) => response.text())
+        .then((data) => {
+          // Inject the content into the placeholder
+
+          document.getElementById("footer-placeholder").innerHTML = data;
+        });
     </script>
-    <script src="MySkills.js"></script>
+    <script src="JsAsset/head.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
